[project]
name = "indianart"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate==0.27.2",
    "diffusers==0.26.3",
    "fastapi==0.109.0",
    "peft==0.9.0",
    "pillow==10.2.0",
    "python-multipart==0.0.9",
    "safetensors==0.4.2",
    "torch==2.2.0",
    "torchvision==0.17.0",
    "transformers==4.37.2",
    "uvicorn[standard]==0.27.0",
]
