[project]
name = "indianart"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.31.0",
    "diffusers>=0.30.0",
    "fastapi==0.109.0",
    "httpx>=0.28.1",
    "huggingface-hub>=0.25.0",
    "numpy<2",
    "peft>=0.17.0",
    "pillow==10.2.0",
    "python-multipart==0.0.9",
    "safetensors==0.4.2",
    "starlette>=0.35.1",
    "torch>=2.4.0",
    "torchaudio>=2.4.0",
    "torchvision>=0.19.0",
    "transformers>=4.40.0",
    "uvicorn[standard]==0.27.0",
]
